[package]
name = "tree-sitter-java-jml-subset"
description = "A subset of Java with JML annotations"
version = "0.1.0"
authors = ["Alexander Gottfried <alexander.gottfried@stud.tu-darmstadt.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "java-jml-subset"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-java_jml_subset"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
